--- a/package.json
+++ b/package.json
@@ -11,5 +11,6 @@
 		"type": "git",
 		"url": "https://github.com/freeCodeCamp/boilerplate-npm.git"
 	},
-  "author": "Moobarrac"
+  "author": "Moobarrac",
+  "description": "A project to master node and express js"
 }
