--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
-	"name": "fcc-learn-npm-package-json",
-	"dependencies": {
-		"express": "^4.14.0"
-	},
-	"main": "server.js",
-	"scripts": {
-		"start": "node server.js"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/freeCodeCamp/boilerplate-npm.git"
-	},
+  "name": "fcc-learn-npm-package-json",
+  "dependencies": {
+    "express": "^4.14.0"
+  },
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/freeCodeCamp/boilerplate-npm.git"
+  },
   "author": "Moobarrac",
   "description": "A project to master node and express js",
-  "keywords": ["projects", "node", "express", "practice"]
+  "keywords": [
+    "projects",
+    "node",
+    "express",
+    "practice",
+    "freecodecamp"
+  ]
 }
