--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "freecodecamp"
   ],
   "license": "MIT",
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "dependencies": {
+    "@freecodecamp/example": "1.1.0",
+    "express": "^4.14.0"
+  }
 }
