--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "license": "MIT",
   "version": "1.0.0",
   "dependencies": {
-    "@freecodecamp/example": "~1.2.13",
+    "@freecodecamp/example": "^1.2.13",
     "express": "^4.14.0"
   }
 }
